# talkshow

./: .gitignore  Cargo.toml  rss-db.txt
src/: audio.rs  audio_control.rs  audio_player.rs  controls.rs  episodes.rs  keyboard_controls.rs  lib.rs  main.rs  podcast_manager.rs  tui.rs
tests/: audio_control_tests.rs  controls_tests.rs  episodes_integration_tests.rs  episodes_tests.rs  podcast_manager_tests.rs  podcast_store_tests.rs  test-feed.rss
