[package]
name = "rss_reader"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.9", features = ["blocking"] }
rss = "2.0"
anyhow = "1.0"
rodio = "0.20.1"
termion = "4.0.3"
ratatui = "0.29"
crossterm = "0.28.1"
lazy_static = "1.4"
log = "0.4"
env_logger = "0.11.5"

[dev-dependencies]
tempfile = "3.8.1"
